# TikunOlam

./: .dockerignore  .env.example  .env.no-claude  .gitignore  ANTHROPIC_ALTERNATIVES.md  Dockerfile  FRONTEND_COMPLETADO.md  FRONTEND_SETUP.md  GET_ANTHROPIC_KEY.md  INVESTOR_PITCH.md  LICENSE  PHILOSOPHY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_USAGE.md  SISTEMA_LISTO.md  TIKUN_ONE_PAGER.md  docker-compose.dev.yml  docker-compose.yml  index.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.ps1  start.sh  test_rbu_onu_COMPATIBLE.py  tikun_orchestrator.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: API.md  INSTALL.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisForm.tsx  BinahSigmaView.tsx  Header.tsx  LoadingState.tsx  Results.tsx  SefirahCard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/tikun/: __init__.py  config.py  orchestrator.py
src/tikun/api/: __init__.py  main.py  models.py
src/tikun/models/: __init__.py  schemas.py
src/tikun/sefirot/: __init__.py  base.py  binah.py  chesed.py  chochmah.py  gevurah.py  hod.py  keter.py  malchut.py  netzach.py  tiferet.py  yesod.py
src/tikun/utils/: __init__.py  export.py  logging.py  validation.py
tests/: __init__.py  conftest.py  test_config.py  test_models.py  test_validation.py
tests/integration/: __init__.py  test_api.py
